--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Mand Mobile</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,user-scalable=no"
+    />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="<%= BASE_URL %>/static/brid.js" />
+    <title>h5-vue-template-project</title>
+    <script>
+      window.env = {
+        isBigScreen: judgeBigScreen(),
+      };
+    </script>
     <script>
       (function(window, document) {
         function resize() {
-          var ww = window.innerWidth
+          var ww = window.innerWidth;
           if (ww > window.screen.width) {
-            window.requestAnimationFrame(resize)
+            window.requestAnimationFrame(resize);
           } else {
             if (ww > 750) {
-              ww = 750
+              ww = 750;
             }
-            document.documentElement.style.fontSize = ww * 100 / 750 + 'px'
+            document.documentElement.style.fontSize = (ww * 100) / 750 + "px";
           }
         }
 
         resize();
 
-        window.addEventListener('resize', resize);
-        window.addEventListener('pageshow', function (e) {
+        window.addEventListener("resize", resize);
+        window.addEventListener("pageshow", function(e) {
           if (e.persisted) {
             resize();
           }
