feat:完成登录模板开发，包含手机号账密、验证码登录

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,9 @@
       content="width=device-width,initial-scale=1.0,user-scalable=no"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <link rel="icon" href="<%= BASE_URL %>/static/brid.js" />
+    <!-- <link rel="icon" href="/static/env.js" /> -->
     <title>h5-vue-template-project</title>
-    <script>
-      window.env = {
-        isBigScreen: judgeBigScreen(),
-      };
-    </script>
+
     <script>
       (function(window, document) {
         function resize() {
@@ -37,7 +33,30 @@
             resize();
           }
         });
+
+        /**判断屏幕大小 */
+        function judgeBigScreen() {
+          //，这里根据返回值 true 或false ,返回true的话 则为全面屏
+          let result = false;
+          const rate = window.screen.height / window.screen.width;
+          let limit =
+            window.screen.height == window.screen.availHeight ? 1.8 : 1.65; // 临界判断值
+
+          // window.screen.height为屏幕高度
+          //  window.screen.availHeight 为浏览器 可用高度
+
+          if (rate > limit) {
+            result = true;
+          }
+          return result;
+        }
+        window.judgeBigScreen = judgeBigScreen;
       })(window, document);
+    </script>
+    <script>
+      window.__ENV__ = {
+        isBigScreen: window.judgeBigScreen(),
+      };
     </script>
   </head>
   <body>
