feat:初始化首页tab样例

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1.0,user-scalable=no"
     />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <!-- <link rel="icon" href="/static/env.js" /> -->
     <title>h5-vue-template-project</title>
